# Aind.Behavior.VrForaging

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .python-version  404.html  Aind.Behavior.VrForaging.sln  CONTRIBUTING.md  Olfactometer_core.bonsai  Olfactometer_core.bonsai.layout  README.md  api.html  api.rig.html  api.session.html  api.task_logic.html  clabe.yml  clabe_default.yml  dataset.html  deploy.cmd  deploy.ps1  exampleOdor.bonsai  genindex.html  hooks.py  index.html  json-schemas.html  json-schemas.rig.html  json-schemas.session.html  json-schemas.task_logic.html  launcher.cmd  launcher.ps1  launcher.py  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  rotary.bonsai  rotary.bonsai.layout  search.html  searchindex.js
.bonsai/: Bonsai.config
.config/: dotnet-tools.json
.doctrees/: api.doctree  api.rig.doctree  api.session.doctree  api.task_logic.doctree  dataset.doctree  environment.pickle  index.doctree  json-schemas.doctree  json-schemas.rig.doctree  json-schemas.session.doctree  json-schemas.task_logic.doctree
.github/workflows/: ci.yml  docs.yml  tag_and_publish.yml  vr-foraging-cicd.yml
_sources/: api.rig.rst.txt  api.session.rst.txt  api.task_logic.rst.txt  dataset.rst.txt  index.rst.txt  json-schemas.rig.rst.txt  json-schemas.rst.txt  json-schemas.session.rst.txt
_static/: dataset.html  dataset.txt  documentation_options.js
api/: index.html
api/curricula/: index.html
api/rig/: index.html
api/session/: index.html
api/task_logic/: index.html
assets/: dataset_fragment.html
bonsai/: Bonsai.config  NuGet.config  setup.ps1
curricula_diagrams/depletion/: index.html
curricula_diagrams/depletion_stops_offset/: index.html
curricula_diagrams/depletion_stops_rate/: index.html
curricula_diagrams/deterministic_reversals/: index.html
curricula_diagrams/deterministic_reversals_reward_capped/: index.html
curricula_diagrams/learning_sets/: index.html
curricula_diagrams/replenishment_depletion_offset/: index.html
curricula_diagrams/single_site/: index.html
curricula_diagrams/template/: index.html
dataset/: index.html
dataverse-lims-acquisition-scheduling-proposal/: index.html
docs/: api.rig.rst  api.rst  api.session.rst  api.task_logic.rst  build.py  conf.py  curricula_build.py  dataset.md  dataset.rst  dataverse-lims-acquisition-scheduling-proposal.md  hooks.py  index.rst  json-schemas.md  json-schemas.rig.rst  json-schemas.rst  json-schemas.session.rst  json-schemas.task_logic.rst
docs/api/: curricula.md  index.md  rig.md  session.md  task_logic.md
docs/assets/: dataset.html  dataset_fragment.html
examples/: clabe.yml  examples.py  mcm_example.py  rig.py  session.py  task_learning_sets.py  task_mcm.py  task_one_shot_reversals.py  task_patch_foraging.py  test_single_site_patch.py
json-schemas/: index.html
python/python-launcher/: launcher.py
python/schemas_sandbox/: CustomClassExample.ipynb  demos.ipynb  generate_session.py  session.json
python/texture_generation/: background_generation.py
schema/: aind_behavior_vr_foraging.json  depletion.json  depletion_stops_offset.json  depletion_stops_rate.json  deterministic_reversals.json  deterministic_reversals_reward_capped.json  learning_sets.json  replenishment_depletion_offset.json  single_site.json  single_site_matching.json  template.json
scripts/: aind.py  create_schema_container.py  deploy.ps1  examples.py  launcher.cmd  launcher.ps1  launcher.py  regenerate.cmd  regenerate.ps1  regenerate.py
search/: search_index.json
src/: .gitignore  Extensions.csproj  benchmark-pid.bonsai  calibration.bonsai  main.bonsai  refactor.bonsai  rotary.bonsai  synch.bonsai  test.bonsai  test_ctcm.bonsai  test_deserialization.bonsai  vr-foraging.bonsai  water-calibration.bonsai
src/DataSchemas/: ExampleRig.yml  ExampleSession.yml  ExampleSubject.yml  ExampleTaskLogic.yml  aind-vr-foraging-common.json  aind-vr-foraging-hardware.json  aind-vr-foraging-logging.json  aind-vr-foraging-rig.json  aind-vr-foraging-session.json  aind-vr-foraging-task.json  aind-vr-foraging.json  aind_behavior_session_model.json  aind_behavior_vr_foraging.json  aind_vr_foraging_rig.json  aind_vr_foraging_session.json  aind_vr_foraging_task.json  aind_vr_foraging_task_logic.json  behavior_session_schema.json  common.py  dataclasses-distributions.json  examples.py  pyd_common.py  pyd_distributions.py  pyd_session.py  pyd_taskLogic.py  regenerate.cmd  regenerate.ps1  regenerate.py  schema_container.json
src/Extensions/: ActiveSiteEvent.bonsai  AddGapSite.bonsai  AddInterPatchSite.bonsai  AddPostPatchSite.bonsai  AddRewardSite.bonsai  AdjustImage.bonsai  AdjustQuadTexture.bonsai  AindBehaviorSessionModel.cs  AindBehaviorVrForaging.Generated.cs  AindBehaviorVrForaging.cs  AindManipulator.bonsai  AindManipulatorGui.bonsai  AindSpinnakerCapture.cs  AindVrForagingLogging.cs  AindVrForagingRig.cs  AindVrForagingRigExtensions.cs  AindVrForagingSession.cs  AindVrForagingTask.cs  AindVrForagingTaskLogic.cs  Annotation.bonsai  ApplyRewardFunction.cs  BindTextureFromBank.bonsai  BlockFactoryLogic.bonsai  CameraLogger.bonsai  CastToNullableFloat.cs  CheckActiveSiteLabel.bonsai  CheckHabituationStageLabel.bonsai  ColorExtensions.cs  ConditionalTextVisualizer.cs  ConditionalTextVisualizerControl.cs  ConstructRewardAvailableUpdate.cs  ContainsKey.cs  CorridorFactory.bonsai  CreateButtonCommand.cs  CreateCorridorSpecs.bonsai  CreateEnvironmentSampler.cs  CreateExperimentcommand.cs  CreateHarpSoftwareEvent.bonsai  CreateHubOdorMixture.cs  CreateOdorMix.cs  (+118 more)
src/Legacy/: rotary.bonsai
src/Shaders/: AdjustCubemapTexture.frag  AdjustQuadTexture.frag  Brightness.frag  DisplayColorAdjustments.frag  ScaledTexturedModel.frag
src/aind_behavior_vr_foraging/: __init__.py  cli.py  data_mappers.py  data_qc.py  launcher.py  regenerate.py  rig.py  task_logic.py
src/aind_behavior_vr_foraging_curricula/: __init__.py
tests/: __init__.py  test_aind_data_mapper.py  test_bonsai.py  test_examples.py  test_task_logic.py
tests/Extensions.Tests/: CreateHubOdorMixtureTests.cs  EnvironmentSamplerTests.cs  (+5 more)
(+45 files in other folders)
